# inference-pipeline-benchmark

./: .env.example  .gitignore  AGENTS.md  BENCHMARK_GUIDE.md  INFERENCE_BACKENDS.md  NITROGEN_QUICKSTART.md  QUICKSTART.md  README.md  SMOKE_TESTS.md  pyproject.toml  requirements.txt
.claude/skills/: benchmark-gpu-inference  extend-benchmark-config  interpret-benchmark-summary  prepare-nitrogen-dataset  setup-inference-backend
.cursor/rules/: benchmark-gpu-inference.mdc  extend-benchmark-config.mdc  interpret-benchmark-summary.mdc  prepare-nitrogen-dataset.mdc  setup-inference-backend.mdc
benchmarks/: README.md  __init__.py  accuracy.py  cli.py  metrics.py  nitrogen_artifacts.py  nitrogen_artifacts.yaml  nitrogen_exec.py  nitrogen_export.py  nitrogen_quant.py  runner.py  scenario_config.py  summary.py
benchmarks/configs/: h200.yaml  rtx5090.yaml  rtx_pro6000.yaml  trtllm-vlm.yml
benchmarks/frameworks/: __init__.py  base.py  modelopt_bench.py  sglang_bench.py  triton_bench.py  trtllm_bench.py  vllm_bench.py
benchmarks/probes/: __init__.py  gpu_sampler.py  prom_poller.py  prom_scrape.py
benchmarks/sources/: __init__.py  nitrogen.py
docs/: architecture.md  capacity.md  for-game-sim-teams.md  frameworks.md  gpu-strategy.md  metrics.md  models.md  nitrogen.md  scenarios.md  why-this-matters.md
docs/findings/: knowledge.yaml  nemotron-omni-on-trtllm.md  qwen3.6-on-trtllm.md  trtllm-1.2.1-qwen3-vl-32b-fp8.md
examples/: basic_inference.py  run_fixture.py  run_scenario.py
scripts/: build_nitrogen_artifacts.py  build_nitrogen_scenarios.py  gpu_probe.sh  list_nim_models.sh  nitrogen_load_test.py  render_agent_docs.py  run_all_scenarios.sh  serve_nitrogen.py
skills/benchmark-gpu-inference/: SKILL.md
skills/extend-benchmark-config/: SKILL.md
skills/interpret-benchmark-summary/: SKILL.md
skills/prepare-nitrogen-dataset/: SKILL.md
skills/setup-inference-backend/: SKILL.md
src/vlm_pipeline/: __init__.py  config.py  pipeline.py  schemas.py
src/vlm_pipeline/adapters/: __init__.py  gamepad_to_actions.py
src/vlm_pipeline/decoders/: __init__.py  action_decoder.py
src/vlm_pipeline/encoders/: __init__.py  vision_encoder.py
src/vlm_pipeline/executors/: __init__.py  executor.py
src/vlm_pipeline/reasoners/: __init__.py  base.py  nim_qwen_vl.py  nitrogen_backend.py  sglang_backend.py  trtllm_backend.py  vllm_backend.py
src/vlm_pipeline/validators/: __init__.py  safety_validator.py
tests/: conftest.py
tests/smoke/: test_fixtures.py  test_local_backends.py  test_nim_live.py  test_pipeline_smoke.py  test_scenarios.py
tests/smoke/fixtures/: README.md  _generate_images.py  loader.py  schema.py
tests/smoke/fixtures/01_clash_of_clans_start_attack/: expected.json
tests/smoke/fixtures/01_click_start_button/: expected.json  input.json
tests/smoke/fixtures/02_dismiss_update_popup/: expected.json  input.json
tests/smoke/fixtures/03_fps_engage_and_reload/: request.json
tests/smoke/fixtures/03_pause_then_resume_video/: expected.json  input.json
tests/smoke/scenarios/: README.md  loader.py  schema.py
tests/smoke/scenarios/01_clash_of_clans_start_attack/: request.json
tests/smoke/scenarios/02_catan_open_menu/: expected.json  request.json
tests/smoke/scenarios/03_fps_engage_and_reload/: expected.json
tests/unit/: test_decoder_validator.py  test_gamepad_to_actions.py  test_nitrogen_accuracy_config.py  test_nitrogen_exec.py  test_nitrogen_reasoner.py  test_runner_nitrogen_wiring.py  test_schemas.py
