[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-pipeline-benchmark"
version = "0.0.1"
description = "Real-time VLM-to-action inference pipeline + multi-framework benchmark harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "NVIDIA" }]
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "numpy>=1.26",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
]

[project.scripts]
# One CLI entry point so agents (Claude Code skills, Codex AGENTS.md,
# Cursor rules) call `bench` instead of memorising five scripts. JSON
# status contract documented in benchmarks/cli.py.
bench = "benchmarks.cli:app"

[project.entry-points."pipeline_bench.scenario_sources"]
# Built-in scenario sources are registered here too — no special-case
# path. Customers add their own source by declaring the same group in
# their own pyproject.toml (see skills/prepare-nitrogen-dataset/SKILL.md).
nitrogen = "benchmarks.sources.nitrogen:build"

[project.optional-dependencies]
# Pipeline backend extras — install only what your machine supports.
# Versions pinned exact to keep benchmark numbers reproducible. Bump
# deliberately and re-run; do not float.
nim     = ["openai>=1.30"]                   # NIM exposes an OpenAI-compatible API
vllm    = ["vllm==0.20.1"]                   # 2026-05-03
sglang  = [
    "sglang==0.5.11",                         # 2026-05-05
    # sglang's ParakeetExtractor (audio path for AVLM models like
    # Nemotron-Omni) hard-imports librosa but sglang doesn't list it as a
    # dep — server crashes on startup with ImportError otherwise.
    "librosa>=0.11",
]
# tensorrt-llm wheels are GPU/driver-specific and live on NVIDIA's index
# (https://pypi.nvidia.com), not standard PyPI — pip can't satisfy them
# from this extra alone. Install manually with the pinned version:
#   pip install tensorrt-llm==1.2.1 --extra-index-url https://pypi.nvidia.com
trtllm  = []
modelopt= []                                  # nvidia-modelopt is installed from NVIDIA's index
triton  = ["tritonclient[grpc]>=2.45"]
# NitroGen diffusion-policy backend. `nitrogen` itself (the package + ng.pt
# checkpoint) is installed from its own repo (pip install -e ../NitroGen) plus
# `hf download nvidia/NitroGen ng.pt`; torch/diffusers/transformers come with
# it. We list the client-side deps the reasoner needs here. TensorRT / ONNX /
# modelopt (FP8/NVFP4 export) install from NVIDIA's index on the GPU box.
nitrogen= [
    "pyzmq>=25", "torch", "torchvision",
    # transformers >=5 dropped the `SiglipModel.vision_model` wrapper, breaking
    # NitroGen's `model.vision_model` access in flow_matching_transformer/
    # nitrogen.py. Pin <5 until MineDojo/NitroGen lands a compat shim.
    "transformers>=4.40,<5",
    "diffusers", "einops",
]
# Dataset → scenario converter (scripts/build_nitrogen_scenarios.py): reads the
# action parquet, fetches source videos, decodes frames.
dataset = ["polars>=1.0", "av>=12.0", "yt-dlp>=2024.0"]
dev     = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["vlm_pipeline*", "benchmarks*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "smoke: quick end-to-end sanity checks (golden path only)",
    "gpu: requires a CUDA-capable GPU",
    "nim: requires NIM API credentials",
    "vllm: requires a running vLLM server (localhost:8000)",
    "sglang: requires a running SGLang server (localhost:30000)",
    "trtllm: requires a running trtllm-serve server (localhost:8002)",
]
